# THE-WATCHER

./: GETTING_STARTED.md  README.md  TERMINAL_MONITOR_README.md  install.bat  install.py  output.py  providers.py  pyproject.toml  requirements.txt  setup.py  terminal_monitor.py  test_error.js  test_error.py  thewatcher.bat  thewatcher.ps1  thewatcher_cli.py  watchit.py
