[tool.poetry]
name = "thewatcher"
version = "0.1.0"
description = "A CLI tool that checks console errors and provides possible fixes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "thewatcher"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^13.4.1"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
openai = "^1.1.1"
diskcache = "^5.6.1"
pluggy = "^1.2.0"
jinja2 = "^3.1.2"
appdirs = "^1.4.4"
toml = "^0.10.2"
importlib-metadata = "^6.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.3.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
thewatcher = "thewatcher.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 